# kanatabar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ci/: clean-install-audit.sh  run-dev.sh
ci/gates/: gate-0.sh  gate-1.sh  gate-10.sh  gate-12.sh  gate-2.sh  gate-3.sh  gate-4.sh  gate-5.sh  gate-6.sh  gate-7.sh  gate-8.sh  gate-9.sh
crates/kanatabar-core/: Cargo.toml
crates/kanatabar-core/src/: backoff.rs  config.rs  debounce.rs  device.rs  doctor.rs  driver.rs  ipc.rs  kanata.rs  lib.rs  logring.rs  machine.rs  pathsafety.rs  state.rs  vhidd.rs
crates/kanatabar-tray/: Cargo.toml
crates/kanatabar-tray/assets/appicon/: README.md
crates/kanatabar-tray/assets/ui/: devices.html  health.html  shared.css  wizard.html
crates/kanatabar-tray/src/: conn.rs  devwin.rs  ffi.rs  healthwin.rs  icons.rs  lib.rs  login.rs  main.rs  menu.rs  model.rs  notify.rs  pages.rs  reconnect.rs  session.rs  single_instance.rs  ui_shell.rs  wizard.rs  wizardwin.rs
crates/kanatabar-tray/tests/: client.rs
crates/kanatactl/: Cargo.toml
crates/kanatactl/src/: install.rs  lib.rs  main.rs
crates/kanatactl/tests/: doctor.rs  e2e.rs  install.rs
crates/kanatad/: Cargo.toml
crates/kanatad/src/: child.rs  config.rs  configmgr.rs  doctor.rs  events.rs  lib.rs  logbuf.rs  main.rs  statefile.rs  supervisor.rs  watch.rs
crates/kanatad/src/control/: auth.rs  frame.rs  mod.rs
crates/kanatad/src/device/: mod.rs
crates/kanatad/src/ffi/: iokit.rs  mod.rs  peercred.rs  power.rs  proc.rs  tcc.rs
crates/kanatad/src/health/: driver.rs  mod.rs  orphan.rs  tcp.rs
crates/kanatad/tests/: config.rs  control.rs  device.rs  health.rs  iokit_smoke.rs  supervisor.rs
docs/: HW-TESTS.md  PROGRESS.md  SECURITY.md  SPEC.md
docs/captures/: doctor-green.json  systemextensionsctl-list.txt
docs/design/: phase12-ui-layer.md
packaging/: Info.plist  build-pkg.sh  build-universal.sh  bundle-app.sh  version.sh
packaging/homebrew/: kanatabar.rb
resources/launchd/: io.github.ibimal.kanatabar.agent.plist  io.github.ibimal.kanatabar.daemon.plist  io.github.ibimal.kanatabar.vhidd.plist
resources/mock-kanata/: Cargo.toml
resources/mock-kanata/src/: main.rs
resources/mock-kanata/tests/: cli.rs
