[workspace]
resolver = "2"
members = [
    "crates/kanatabar-core",
    "crates/kanatad",
    "crates/kanatactl",
    "crates/kanatabar-tray",
    "resources/mock-kanata",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/ibimal/kanatabar"
publish = false

[workspace.dependencies]
kanatabar-core = { path = "crates/kanatabar-core" }
kanatactl = { path = "crates/kanatactl" }
anyhow = "1"
# objc2 stack: already in the tree via tao/tray-icon; the tray uses it
# directly for UNUserNotificationCenter (SPEC §8 notifications, bundled).
block2 = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
core-foundation = "0.10"
core-foundation-sys = "0.8"
libc = "0.2"
# muda is consumed via tray-icon's re-export (`tray_icon::menu`), not directly.
nix = { version = "0.30", features = ["fs", "signal", "user"] }
notify = "8"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"
# Decodes the pre-rasterized menu-bar template PNGs (assets/menubar/*.png) to
# RGBA; already in the tree via tray-icon, so no new transitive licenses.
png = "0.18"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features off skips x11/dbus; rwh_06 gives windows the
# raw-window-handle impl wry builds against (Phase 12).
tao = { version = "0.35", default-features = false, features = ["rwh_06"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.24"
# WKWebView windows for the Phase 12 UI (docs/design/phase12-ui-layer.md):
# pairs with our pinned tao via raw-window-handle; system webview, no engine.
wry = "0.55"

[profile.release]
strip = true
lto = "thin"
