[package]
name = "kanatabar-core"
description = "Pure logic for KanataBar: state machine, IPC types, config model, backoff. No I/O, no FFI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
