[package]
name = "kanatad"
description = "KanataBar root daemon: supervises kanata, serves the control socket."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
kanatabar-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
core-foundation = { workspace = true }
core-foundation-sys = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
kanatactl = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
