[package]
name = "mock-kanata"
description = "Flag-driven kanata test double: lets the supervisor be developed and tested without root, devices, or real kanata (SPEC §17)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true }
